fix(style.css): add z-index to navbar and footer to display 'box-shadow'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,8 @@ h2 {
 #navbar {
   background-color: red;
   box-shadow: 0px 4px 10px black; /* Shadow on bottom */
+  position: relative;
+  z-index: 99; /* Higher than the carousel */
 }
 
 #navbar .container {
@@ -85,11 +87,13 @@ a.nav-link {
 }
 
 /* Footer / contact */
-footer {
+#footer {
   background-color: red;
   color: black;
   box-shadow: 0px -4px 10px black; /* shadow on top */
   text-align: center;
+  position: relative;
+  z-index: 99; /* Higher than the carousel */
 }
 
 table {
